<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="#7A94D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                android:fontFamily="@font/aclonica"
                android:scaleX="1"
                android:text="@string/text_niveles"
                android:textAlignment="viewStart"
                android:textColor="#FEFEFE"
                android:textSize="60sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/space2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/buttonbasico"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0CC0DF"
                    android:fontFamily="@font/aclonica"
                    android:onClick="IrAOpcionBasico"
                    android:text="@string/btn_text_buttonbasico"
                    android:textSize="34sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/buttonmedio"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0CC0DF"
                    android:fontFamily="@font/aclonica"
                    android:onClick="IrAOpcionMedio"
                    android:text="@string/btn_text_buttonmedio"
                    android:textSize="34sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/buttonavanzado"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0CC0DF"
                    android:fontFamily="@font/aclonica"
                    android:onClick="IrAOpcionAvanzado"
                    android:text="@string/btn_text_buttonavanzado"
                    android:textSize="34sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

            </LinearLayout>

            <Space
                android:id="@+id/space2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#0CC0DF"
                android:onClick="IrAInforme"
                android:text="@string/btn_doc"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/space2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>