<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Basico_2">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7A94D8"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/Puntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/txt_puntos"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_retroceso_b2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#9CC5F7"
                android:onClick="IrAMenu"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/homeAsUpIndicator" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="352dp"
            android:layout_height="204dp"
            app:srcCompat="@drawable/img1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_b2_1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/botones"
            android:fontFamily="@font/aclonica"
            android:text="@string/num1_2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_b2_2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#0CC0DF"
            android:fontFamily="@font/aclonica"
            android:text="@string/num1_3"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_b2_3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#0CC0DF"
            android:fontFamily="@font/aclonica"
            android:text="@string/num1_4"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/VerificarErrores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0CC0DF"
            android:onClick="IrAErrores"
            android:text="@string/finalizar" />

    </LinearLayout>

    <TextView
        android:id="@+id/puntaje_final"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#AEB9D6"
        android:fontFamily="@font/aclonica"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Felicitaciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/aclonica"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/puntaje_final"
        app:layout_constraintEnd_toEndOf="@+id/puntaje_final"
        app:layout_constraintStart_toStartOf="@+id/puntaje_final"
        app:layout_constraintTop_toTopOf="@+id/puntaje_final" />

    <ImageView
        android:id="@+id/img_respuesta_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/correcto" />

</androidx.constraintlayout.widget.ConstraintLayout>